# lazychords-gui

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
res/: icons.qrc  rendering.qrc.depends
res/rendering/: renderer.html
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myexception.h  myslider.cpp  myslider.h
